--- a/lang/cms_language_deDE.txt
+++ b/lang/cms_language_deDE.txt
@@ -1,1 +1,3 @@
-error_toclick 	= Es wurde kein Text zum Anklicken angegeben!
+error         = Fehler
+error_toclick = Es wurde kein Text zum Anklicken angegeben.
+error_toshow  = Es wurde kein Text zum Aus- oder Einklappen angegeben.
