--- a/lang/cms_language_enEN.txt
+++ b/lang/cms_language_enEN.txt
@@ -1,1 +1,3 @@
-error_toclick 	= No text to click has been entered.
+error         = Error
+error_toclick = No text to click has been entered.
+error_toshow  = No text to toggle has been entered.
